New functionality updated

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                                 <h5>Bachelor of Computer Applications (BCA)</h5>
                             </div>
                             <div class="timeline__desc">
-                                <p>Currently pursuing BCA with a strong focus on computer science fundamentals, programming languages, and software development. Current CGPA: 8.20. Studying subjects including Java programming, data structures, algorithms, web development, and database management systems.</p>
+                                <p>Currently pursuing BCA with a strong focus on computer science fundamentals, programming languages, and software development. Current CGPA: 8.27. Studying subjects including Java programming, data structures, algorithms, web development, and database management systems.</p>
                             </div>
                         </div>
 
@@ -357,7 +357,7 @@
             </div>
             <div class="modal-body">
                 <div class="cv-preview">
-                    <img src="images/Gaurav-resume-image.jpg" alt="Gaurav Sahu's CV" class="cv-image">
+                    <img src="images/Gaurav-sahu-Resume-image.jpg" alt="Gaurav Sahu's CV" class="cv-image">
                 </div>
             </div>
         </div>
@@ -374,7 +374,7 @@
             <div class="column large-full">
                 <h2 class="section-heading section-heading--centerbottom">Projects</h2>
                 <p class="section-desc">
-                    Here are some of my selected projects showcasing my backend development skills. Feel free to 
+                    Here are some of my selected projects showcasing my full-stack development skills. Feel free to 
                     check them out and get in touch if you'd like to discuss similar projects.
                 </p>
             </div>
@@ -388,35 +388,48 @@
                 <div class="masonry__brick" data-aos="fade-up">
                     <div class="item-folio">
                         <div class="item-folio__thumb">
-                            <a href="#0" class="thumb-link" title="Portfolio Website" data-size="1050x700">
-                                <div class="project-placeholder">
-                                    <i class="fas fa-code"></i>
-                                    <span>Portfolio</span>
+                            <div class="thumb-link thumb-link--external" data-pswp="false">
+                                <div class="project-embed">
+                                    <iframe
+                                        class="project-embed__frame"
+                                        src="https://real-time-chatapp-1-vyz7.onrender.com/"
+                                        title="Realtime Chat App preview"
+                                        loading="lazy"
+                                        sandbox="allow-forms allow-scripts allow-same-origin allow-popups allow-popups-to-escape-sandbox"
+                                        referrerpolicy="no-referrer"
+                                    ></iframe>
+                                    <div class="project-embed__badge">
+                                        <i class="fas fa-bolt" aria-hidden="true"></i>
+                                        <span>Live preview</span>
+                                    </div>
                                 </div>
-                            </a>    
-                            <a href="#0" class="item-folio__project-link" title="Project link" target="_blank"></a>
+                                <a class="thumb-link__overlay" href="https://real-time-chatapp-1-vyz7.onrender.com/" title="Realtime Chat App (Live)" target="_blank" rel="noopener noreferrer" aria-label="Open Realtime Chat App"></a>
+                            </div>
+                            <a href="https://real-time-chatapp-1-vyz7.onrender.com/" class="item-folio__project-link" title="Open live app" target="_blank" rel="noopener noreferrer"></a>
                         </div>
     
                         <div class="item-folio__text">
                             <h4 class="item-folio__title">
-                                Portfolio Website
+                                Realtime Chat App
                             </h4>
                             <p class="item-folio__cat">
-                                Web Development
+                                Full-Stack • Realtime
                             </p>
                             <div class="project-technologies-integrated">
                                 <div class="tech-tags">
-                                    <span class="tech-tag">HTML5</span>
-                                    <span class="tech-tag">CSS3</span>
-                                    <span class="tech-tag">JavaScript</span>
-                                    <span class="tech-tag">Font Awesome</span>
-                                    <span class="tech-tag">Responsive</span>
+                                    <span class="tech-tag">React</span>
+                                    <span class="tech-tag">Node.js</span>
+                                    <span class="tech-tag">Express.js</span>
+                                    <span class="tech-tag">Socket.io</span>
+                                    <span class="tech-tag">MongoDB</span>
+                                    <span class="tech-tag">Auth</span>
+                                    <span class="tech-tag">Realtime</span>
                                 </div>
                             </div>
                         </div>
     
                         <div class="item-folio__caption">
-                            <p>A responsive personal portfolio website built with HTML, CSS, and JavaScript. Features modern design, smooth animations, and showcases my skills and projects effectively.</p>
+                            <p>A realtime chat application with authentication and live messaging. Click to open the live app.</p>
                         </div>
                     </div>
                 </div> <!-- end masonry__brick -->
@@ -424,13 +437,29 @@
                 <div class="masonry__brick" data-aos="fade-up">
                     <div class="item-folio">
                         <div class="item-folio__thumb">
-                            <a href="#0" class="thumb-link" title="Contact Manager" data-size="1050x700">
-                                <div class="project-placeholder">
-                                    <i class="fas fa-address-book"></i>
-                                    <span>Contact Manager</span>
+                            <a href="https://github.com/GauravSahu891/my-contact-backend" class="thumb-link" title="Contact Manager (GitHub)" target="_blank" rel="noopener noreferrer" data-pswp="false">
+                                <div class="project-mockup">
+                                    <div class="project-mockup__topbar">
+                                        <div class="project-mockup__dots">
+                                            <span></span><span></span><span></span>
+                                        </div>
+                                        <div class="project-mockup__title">Contact Manager</div>
+                                    </div>
+                                    <div class="project-mockup__content">
+                                        <div class="project-mockup__search"></div>
+                                        <div class="project-mockup__list">
+                                            <div class="project-mockup__row"><span class="project-mockup__avatar"></span><span class="project-mockup__line"></span></div>
+                                            <div class="project-mockup__row"><span class="project-mockup__avatar"></span><span class="project-mockup__line"></span></div>
+                                            <div class="project-mockup__row"><span class="project-mockup__avatar"></span><span class="project-mockup__line"></span></div>
+                                        </div>
+                                        <div class="project-mockup__footer">
+                                            <i class="fab fa-github" aria-hidden="true"></i>
+                                            <span>View source on GitHub</span>
+                                        </div>
+                                    </div>
                                 </div>
                             </a>
-                            <a href="#0" class="item-folio__project-link" title="Project link" target="_blank"></a>
+                            <a href="https://github.com/GauravSahu891/my-contact-backend" class="item-folio__project-link" title="Open GitHub repo" target="_blank" rel="noopener noreferrer"></a>
                         </div>
                         <div class="item-folio__text">
                             <h4 class="item-folio__title">
@@ -448,12 +477,13 @@
                                     <span class="tech-tag">Express.js</span>
                                     <span class="tech-tag">MongoDB</span>
                                     <span class="tech-tag">Mongoose</span>
+                                    <span class="tech-tag">REST API</span>
                                     <span class="tech-tag">CRUD</span>
                                 </div>
                             </div>
                         </div>
                         <div class="item-folio__caption">
-                            <p>A full-stack contact management application built with HTML, CSS, JavaScript for frontend and Node.js, Express.js, and MongoDB for backend. Features user authentication, CRUD operations, and responsive design.</p>
+                            <p>A full-stack contact management application with authentication and CRUD operations. Click to view the source code on GitHub.</p>
                         </div>
                     </div>
                 </div> <!-- end masonry__brick -->
@@ -754,8 +784,6 @@
     <footer>
         <div class="row">
             <div class="column large-full ss-copyright">
-                <span>© Copyright Gaurav Sahu 2024</span> 
-                <span>Design by <a href="https://www.styleshout.com/">StyleShout</a></span>
             </div>            
 
             <div class="ss-go-top">
